# crispro-front-end

./: .env.production  .gitignore  env.example  index.html  package-lock.json  package.json  render.yaml  test_paclitaxel_payload.py  vite.config.js
docs/: MANUAL_VERIFY_FE_CHECKLIST.md  SL_ARSENAL_BLOG.md  SL_CAPABILITY_ONE_PAGER.md  TrialCardAcceptanceChecklist.md  TrialCardRenderContract.md
oncology-frontend/: vite.config.js
public/data/: ovarian.json
src/: App.jsx  index.css  theme.js
src/__tests__/: orchestrator.integration.test.js
src/components/: ImprovedSidebar.jsx  SyntheticLethalityDetective.jsx
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/: .env.example  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/api/: app.py  kb_routes.py  multimodal_routes.py  routes.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/core/: config.py  drug_mapper.py  models.py  orchestrator.py  pathway_annotator.py  sl_engine.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/kb/: evidence_fuser.py  kb_engine.py  models.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/kb/clients/: cgi_client.py  civic_client.py  clinvar_client.py  jax_client.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/kb/tests/: test_kb.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/multimodal/: literature_receipts.py  matrix_builder.py  modality_fuser.py  models.py  pharmacologic_analyzer.py  replication_stress.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/multimodal/tests/: test_benchmark.py  test_multimodal.py
src/components/orchestrator/Analysis/SyntheticLethality/sl_agent/tests/: test_api.py  test_drug_mapper.py  test_orchestrator.py  test_sl_engine.py
src/constants/: clinicalTestRegistry.js  journeyPhases.js  moatNavigation.js  signalStateEngine.js
src/context/: AgentContext.jsx  (+2 more)
(+273 files in other folders)
