[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sl-agent"
version = "2.0.0"
description = "Synthetic Lethality Mapping Agent — FastAPI backend for precision oncology SL analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["synthetic lethality", "precision oncology", "DepMap", "CRISPRi", "cancer genomics"]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "httpx>=0.27",
    "chembl-webresource-client>=0.10",
    "pyarrow>=16",        # parquet cache
    "openpyxl>=3.1",      # GDSC Excel files (optional enrichment)
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",        # TestClient
    "respx>=0.21",        # httpx mock
]

[project.scripts]
sl-agent = "sl_agent.main:main"

# ─────────────────────────────────────────────────────────────────────────────
# Pytest configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths       = ["sl_agent/tests", "sl_agent/kb/tests"]
asyncio_mode    = "auto"
addopts         = "-v --tb=short"
filterwarnings  = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─────────────────────────────────────────────────────────────────────────────
# Coverage (optional: pip install pytest-cov)
# ─────────────────────────────────────────────────────────────────────────────
[tool.coverage.run]
source  = ["sl_agent"]
omit    = ["sl_agent/tests/*", "sl_agent/kb/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
